// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`assignment 1`] = `
Object {
  "edges": Array [
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1.1",
      "to": "1.1",
    },
  ],
  "nodes": Array [
    Object {
      "id": "1",
      "label": "1
START
x
'something'
x = 'something'",
      "physics": false,
    },
    Object {
      "id": "1.1",
      "label": "END",
      "physics": false,
    },
  ],
}
`;

exports[`assignment of conditional expression 1`] = `
Object {
  "edges": Array [
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1.1",
      "label": "true",
      "to": "1.1",
    },
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1.2",
      "label": "false",
      "to": "1.2",
    },
    Object {
      "arrows": "to",
      "from": "1.1",
      "id": "1.1-1.1.1",
      "to": "1.1.1",
    },
    Object {
      "arrows": "to",
      "from": "1.1.1",
      "id": "1.1.1-1.1.1.1",
      "to": "1.1.1.1",
    },
    Object {
      "arrows": "to",
      "from": "1.2",
      "id": "1.2-1.1.1",
      "to": "1.1.1",
    },
  ],
  "nodes": Array [
    Object {
      "id": "1",
      "label": "1
START
a
b
<b ? c : d>",
      "physics": false,
    },
    Object {
      "id": "1.1",
      "label": "1.1
c",
      "physics": false,
    },
    Object {
      "id": "1.1.1",
      "label": "1.1.1
a = b ? c : d",
      "physics": false,
    },
    Object {
      "id": "1.1.1.1",
      "label": "END",
      "physics": false,
    },
    Object {
      "id": "1.2",
      "label": "1.2
d",
      "physics": false,
    },
  ],
}
`;

exports[`block 1`] = `
Object {
  "edges": Array [
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1.1",
      "to": "1.1",
    },
  ],
  "nodes": Array [
    Object {
      "id": "1",
      "label": "1
START
a
b
c",
      "physics": false,
    },
    Object {
      "id": "1.1",
      "label": "END",
      "physics": false,
    },
  ],
}
`;

exports[`call expression 1`] = `
Object {
  "edges": Array [
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1.1",
      "to": "1.1",
    },
  ],
  "nodes": Array [
    Object {
      "id": "1",
      "label": "1
START
a
a()",
      "physics": false,
    },
    Object {
      "id": "1.1",
      "label": "END",
      "physics": false,
    },
  ],
}
`;

exports[`call expression with parameters 1`] = `
Object {
  "edges": Array [
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1.1",
      "to": "1.1",
    },
  ],
  "nodes": Array [
    Object {
      "id": "1",
      "label": "1
START
a
b
a(b)",
      "physics": false,
    },
    Object {
      "id": "1.1",
      "label": "END",
      "physics": false,
    },
  ],
}
`;

exports[`call expression with parameters 2`] = `
Object {
  "edges": Array [
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1.1",
      "to": "1.1",
    },
  ],
  "nodes": Array [
    Object {
      "id": "1",
      "label": "1
START
a
b
c
a(b, c)",
      "physics": false,
    },
    Object {
      "id": "1.1",
      "label": "END",
      "physics": false,
    },
  ],
}
`;

exports[`complete for loop 1`] = `
Object {
  "edges": Array [
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1.1",
      "to": "1.1",
    },
    Object {
      "arrows": "to",
      "from": "1.1",
      "id": "1.1-1.1.1",
      "label": "true",
      "to": "1.1.1",
    },
    Object {
      "arrows": "to",
      "from": "1.1",
      "id": "1.1-1.1.2",
      "label": "false",
      "to": "1.1.2",
    },
    Object {
      "arrows": "to",
      "from": "1.1.1",
      "id": "1.1.1-1.1",
      "to": "1.1",
    },
  ],
  "nodes": Array [
    Object {
      "id": "1",
      "label": "1
START
x
0
x=0",
      "physics": false,
    },
    Object {
      "id": "1.1",
      "label": "1.1
x
true
x=true
<for(x=0;x=true;x=1)>",
      "physics": false,
    },
    Object {
      "id": "1.1.1",
      "label": "1.1.1
a
x
1
x=1",
      "physics": false,
    },
    Object {
      "id": "1.1.2",
      "label": "END",
      "physics": false,
    },
  ],
}
`;

exports[`conditional expression 1`] = `
Object {
  "edges": Array [
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1.1",
      "label": "true",
      "to": "1.1",
    },
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1.2",
      "label": "false",
      "to": "1.2",
    },
    Object {
      "arrows": "to",
      "from": "1.1",
      "id": "1.1-1.1.1",
      "to": "1.1.1",
    },
    Object {
      "arrows": "to",
      "from": "1.2",
      "id": "1.2-1.1.1",
      "to": "1.1.1",
    },
  ],
  "nodes": Array [
    Object {
      "id": "1",
      "label": "1
START
a
<a ? b : c>",
      "physics": false,
    },
    Object {
      "id": "1.1",
      "label": "1.1
b",
      "physics": false,
    },
    Object {
      "id": "1.1.1",
      "label": "END",
      "physics": false,
    },
    Object {
      "id": "1.2",
      "label": "1.2
c",
      "physics": false,
    },
  ],
}
`;

exports[`do while loop 1`] = `
Object {
  "edges": Array [
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1.1",
      "to": "1.1",
    },
    Object {
      "arrows": "to",
      "from": "1.1",
      "id": "1.1-1",
      "label": "true",
      "to": "1",
    },
    Object {
      "arrows": "to",
      "from": "1.1",
      "id": "1.1-1.1.2",
      "label": "false",
      "to": "1.1.2",
    },
  ],
  "nodes": Array [
    Object {
      "id": "1",
      "label": "1
START
a",
      "physics": false,
    },
    Object {
      "id": "1.1",
      "label": "1.1
true
<while(true)>",
      "physics": false,
    },
    Object {
      "id": "1.1.2",
      "label": "END",
      "physics": false,
    },
  ],
}
`;

exports[`empty file 1`] = `
Object {
  "edges": Array [
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1.1",
      "to": "1.1",
    },
  ],
  "nodes": Array [
    Object {
      "id": "1",
      "label": "1
START",
      "physics": false,
    },
    Object {
      "id": "1.1",
      "label": "END",
      "physics": false,
    },
  ],
}
`;

exports[`for loop 1`] = `
Object {
  "edges": Array [
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1.1",
      "label": "true",
      "to": "1.1",
    },
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1.2",
      "label": "false",
      "to": "1.2",
    },
    Object {
      "arrows": "to",
      "from": "1.1",
      "id": "1.1-1",
      "to": "1",
    },
  ],
  "nodes": Array [
    Object {
      "id": "1",
      "label": "1
START
x
<for(;x;)>",
      "physics": false,
    },
    Object {
      "id": "1.1",
      "label": "1.1
a",
      "physics": false,
    },
    Object {
      "id": "1.2",
      "label": "END",
      "physics": false,
    },
  ],
}
`;

exports[`identifier expression 1`] = `
Object {
  "edges": Array [
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1.1",
      "to": "1.1",
    },
  ],
  "nodes": Array [
    Object {
      "id": "1",
      "label": "1
START
a",
      "physics": false,
    },
    Object {
      "id": "1.1",
      "label": "END",
      "physics": false,
    },
  ],
}
`;

exports[`if statement 1`] = `
Object {
  "edges": Array [
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1.1",
      "label": "true",
      "to": "1.1",
    },
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1.1.1",
      "label": "false",
      "to": "1.1.1",
    },
    Object {
      "arrows": "to",
      "from": "1.1",
      "id": "1.1-1.1.1",
      "to": "1.1.1",
    },
  ],
  "nodes": Array [
    Object {
      "id": "1",
      "label": "1
START
a
<if (a)>",
      "physics": false,
    },
    Object {
      "id": "1.1",
      "label": "1.1
b",
      "physics": false,
    },
    Object {
      "id": "1.1.1",
      "label": "END",
      "physics": false,
    },
  ],
}
`;

exports[`if statement 2`] = `
Object {
  "edges": Array [
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1.1",
      "label": "true",
      "to": "1.1",
    },
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1.1.1",
      "label": "false",
      "to": "1.1.1",
    },
    Object {
      "arrows": "to",
      "from": "1.1",
      "id": "1.1-1.1.1",
      "to": "1.1.1",
    },
    Object {
      "arrows": "to",
      "from": "1.1.1",
      "id": "1.1.1-1.1.1.1",
      "to": "1.1.1.1",
    },
  ],
  "nodes": Array [
    Object {
      "id": "1",
      "label": "1
START
a
<if (a)>",
      "physics": false,
    },
    Object {
      "id": "1.1",
      "label": "1.1
b",
      "physics": false,
    },
    Object {
      "id": "1.1.1",
      "label": "1.1.1
c",
      "physics": false,
    },
    Object {
      "id": "1.1.1.1",
      "label": "END",
      "physics": false,
    },
  ],
}
`;

exports[`if statement 3`] = `
Object {
  "edges": Array [
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1.1",
      "label": "true",
      "to": "1.1",
    },
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1.2",
      "label": "false",
      "to": "1.2",
    },
    Object {
      "arrows": "to",
      "from": "1.1",
      "id": "1.1-1.1.1",
      "to": "1.1.1",
    },
    Object {
      "arrows": "to",
      "from": "1.2",
      "id": "1.2-1.1.1",
      "to": "1.1.1",
    },
  ],
  "nodes": Array [
    Object {
      "id": "1",
      "label": "1
START
a
<if (a)>",
      "physics": false,
    },
    Object {
      "id": "1.1",
      "label": "1.1
b",
      "physics": false,
    },
    Object {
      "id": "1.1.1",
      "label": "END",
      "physics": false,
    },
    Object {
      "id": "1.2",
      "label": "1.2
c",
      "physics": false,
    },
  ],
}
`;

exports[`infinite for loop 1`] = `
Object {
  "edges": Array [
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1.1",
      "to": "1.1",
    },
    Object {
      "arrows": "to",
      "from": "1.1",
      "id": "1.1-1.1",
      "to": "1.1",
    },
  ],
  "nodes": Array [
    Object {
      "id": "1",
      "label": "1
START",
      "physics": false,
    },
    Object {
      "id": "1.1",
      "label": "1.1
a",
      "physics": false,
    },
  ],
}
`;

exports[`literals 1`] = `
Object {
  "edges": Array [
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1.1",
      "to": "1.1",
    },
  ],
  "nodes": Array [
    Object {
      "id": "1",
      "label": "1
START
'literal'",
      "physics": false,
    },
    Object {
      "id": "1.1",
      "label": "END",
      "physics": false,
    },
  ],
}
`;

exports[`literals 2`] = `
Object {
  "edges": Array [
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1.1",
      "to": "1.1",
    },
  ],
  "nodes": Array [
    Object {
      "id": "1",
      "label": "1
START
1",
      "physics": false,
    },
    Object {
      "id": "1.1",
      "label": "END",
      "physics": false,
    },
  ],
}
`;

exports[`return 1`] = `
Object {
  "edges": Array [
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1.1",
      "label": "true",
      "to": "1.1",
    },
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1.2",
      "label": "false",
      "to": "1.2",
    },
    Object {
      "arrows": "to",
      "from": "1.1",
      "id": "1.1-1.1.1",
      "to": "1.1.1",
    },
    Object {
      "arrows": "to",
      "from": "1.2",
      "id": "1.2-1.1.1",
      "to": "1.1.1",
    },
  ],
  "nodes": Array [
    Object {
      "id": "1",
      "label": "1
START
a
<if (a)>",
      "physics": false,
    },
    Object {
      "id": "1.1",
      "label": "1.1
true",
      "physics": false,
    },
    Object {
      "id": "1.1.1",
      "label": "END",
      "physics": false,
    },
    Object {
      "id": "1.2",
      "label": "1.2
b",
      "physics": false,
    },
  ],
}
`;

exports[`switch 1`] = `
Object {
  "edges": Array [
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1.1",
      "to": "1.1",
    },
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1.2",
      "to": "1.2",
    },
    Object {
      "arrows": "to",
      "from": "1.1",
      "id": "1.1-1.1.1",
      "to": "1.1.1",
    },
    Object {
      "arrows": "to",
      "from": "1.2",
      "id": "1.2-1.1",
      "to": "1.1",
    },
  ],
  "nodes": Array [
    Object {
      "id": "1",
      "label": "1
START
k",
      "physics": false,
    },
    Object {
      "id": "1.1",
      "label": "1.1
'two'",
      "physics": false,
    },
    Object {
      "id": "1.1.1",
      "label": "END",
      "physics": false,
    },
    Object {
      "id": "1.2",
      "label": "1.2
'one'",
      "physics": false,
    },
  ],
}
`;

exports[`while loop 1`] = `
Object {
  "edges": Array [
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1.1",
      "label": "true",
      "to": "1.1",
    },
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1.2",
      "label": "false",
      "to": "1.2",
    },
    Object {
      "arrows": "to",
      "from": "1.1",
      "id": "1.1-1",
      "to": "1",
    },
  ],
  "nodes": Array [
    Object {
      "id": "1",
      "label": "1
START
true
<while(true)>",
      "physics": false,
    },
    Object {
      "id": "1.1",
      "label": "1.1
a",
      "physics": false,
    },
    Object {
      "id": "1.2",
      "label": "END",
      "physics": false,
    },
  ],
}
`;
